--- a/index.html
+++ b/index.html
@@ -10,6 +10,62 @@
 </head>
 <body>
 
+  <!-- HEADER SECTION  -->
+  <section class="header_section">
+    <div class="container">
+      <header>
+        <div class="logo_box"><img src="./images/icons/logo white.png" alt="logo"></div>
+        <nav>
+          <ul>
+            <li><a href="">Главная</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Услуги</a></li>
+            <li><a href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <div class="nav_links">
+          <a class = "number_link" href="tel:+7 (921) 888 88 88">+7 (921) 888 88 88</a>
+          <a class = "text_link" href="#">Бесплатная консультация</a>
+        </div>
+      </header>
+      <div class="title_part">
+        <span>Ландшафтная студия VESNA</span>
+        <h1>Создаем авторские ландшафты
+          с вашим характером</h1>
+          <h2>От идеи до полной реализации</h2>
+      </div>
+    </div>
+    <img class = "left_branch" src="./images/background/Layer1002.png" alt="left branch">
+  </section>
+  <!-- HEADER SECTION  -->
+
+  <!-- PLACE SECTION -->
+  <section class="place_section">
+    <div class="container">
+    <div class="text_block">
+    <h3>Создаем не просто красивый сад с картинки,
+      <span>а место, куда захочется возвращаться</span></h3>
+    <p>От проекта до ухода за садом – один подрядчик. <br>
+      Мы несем ответственность за все этапы работ. Ваш сад будет органичен и выполнен в одном стиле. Мы делаем участок
+      практичным, безопасным и комфортным для всех членов семьи.
+      <br> В работе мы используем современные и качественные материалы,
+       как залог долговечности производимых работ. Благодаря нашему подходу исключаются возможные ошибки до начала строительных работ и предотвращаются непредвиденные расходы.</p>
+      </div>
+    </div>
+    <img class = "left_branch" src="./images/background/left.png" alt="left branch">
+    <img class = "right_branch" src="./images/background/right.png" alt="right branch">
+    <div class="container">
+    <div class="img_block">
+      <img src="./images/background/Rectangle 102.png" alt="garden">
+      <img src="./images/background/Rectangle 103.png" alt="garden">
+      <img src="./images/background/Rectangle 104.png" alt="garden">
+    </div>
+  </div>
+  </section>
+
+  <!-- PLACE SECTION -->
+
+
 
   <script src="./script/main.js"></script>
 </body>
