added two section

--- a/index.html
+++ b/index.html
@@ -1,72 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Examination</title>
-  <link rel="stylesheet" href="./styles/style.css">
-  <link rel="stylesheet" href="./styles/media.css">
-</head>
-<body>
-
-  <!-- HEADER SECTION  -->
-  <section class="header_section">
-    <div class="container">
-      <header>
-        <div class="logo_box"><img src="./images/icons/logo white.png" alt="logo"></div>
-        <nav>
-          <ul>
-            <li><a href="">Главная</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Услуги</a></li>
-            <li><a href="">Контакты</a></li>
-          </ul>
-        </nav>
-        <div class="nav_links">
-          <a class = "number_link" href="tel:+7 (921) 888 88 88">+7 (921) 888 88 88</a>
-          <a class = "text_link" href="#">Бесплатная консультация</a>
-        </div>
-      </header>
-      <div class="title_part">
-        <span>Ландшафтная студия VESNA</span>
-        <h1>Создаем авторские ландшафты
-          с вашим характером</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Examination</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/media.css" />
+  </head>
+  <body>
+    <!-- HEADER SECTION  -->
+    <section class="header_section">
+      <div class="container">
+        <header>
+          <div class="logo_box"><img src="./images/icons/logo white.png" alt="logo" /></div>
+          <nav>
+            <ul>
+              <li><a href="">Главная</a></li>
+              <li><a href="">Портфолио</a></li>
+              <li><a href="">Услуги</a></li>
+              <li><a href="">Контакты</a></li>
+            </ul>
+          </nav>
+          <div class="nav_links">
+            <a class="number_link" href="tel:+7 (921) 888 88 88">+7 (921) 888 88 88</a>
+            <a class="text_link" href="#">Бесплатная консультация</a>
+          </div>
+        </header>
+        <div class="title_part">
+          <span>Ландшафтная студия VESNA</span>
+          <h1>Создаем авторские ландшафты с вашим характером</h1>
           <h2>От идеи до полной реализации</h2>
+        </div>
       </div>
-    </div>
-    <img class = "left_branch" src="./images/background/Layer1002.png" alt="left branch">
-  </section>
-  <!-- HEADER SECTION  -->
+      <img class="left_branch" src="./images/background/Layer1002.png" alt="left branch" />
+    </section>
+    <!-- HEADER SECTION  -->
 
-  <!-- PLACE SECTION -->
-  <section class="place_section">
-    <div class="container">
-    <div class="text_block">
-    <h3>Создаем не просто красивый сад с картинки,
-      <span>а место, куда захочется возвращаться</span></h3>
-    <p>От проекта до ухода за садом – один подрядчик. <br>
-      Мы несем ответственность за все этапы работ. Ваш сад будет органичен и выполнен в одном стиле. Мы делаем участок
-      практичным, безопасным и комфортным для всех членов семьи.
-      <br> В работе мы используем современные и качественные материалы,
-       как залог долговечности производимых работ. Благодаря нашему подходу исключаются возможные ошибки до начала строительных работ и предотвращаются непредвиденные расходы.</p>
+    <!-- PLACE SECTION -->
+    <section class="place_section">
+      <div class="container">
+        <div class="text_block">
+          <h3>Создаем не просто красивый сад с картинки, <span>а место, куда захочется возвращаться</span></h3>
+          <p>
+            От проекта до ухода за садом – один подрядчик. <br />
+            Мы несем ответственность за все этапы работ. Ваш сад будет органичен и выполнен в одном стиле. Мы делаем
+            участок практичным, безопасным и комфортным для всех членов семьи.
+            <br />
+            В работе мы используем современные и качественные материалы, как залог долговечности производимых работ.
+            Благодаря нашему подходу исключаются возможные ошибки до начала строительных работ и предотвращаются
+            непредвиденные расходы.
+          </p>
+        </div>
       </div>
-    </div>
-    <img class = "left_branch" src="./images/background/left.png" alt="left branch">
-    <img class = "right_branch" src="./images/background/right.png" alt="right branch">
-    <div class="container">
-    <div class="img_block">
-      <img src="./images/background/Rectangle 102.png" alt="garden">
-      <img src="./images/background/Rectangle 103.png" alt="garden">
-      <img src="./images/background/Rectangle 104.png" alt="garden">
-    </div>
-  </div>
-  </section>
+      <img class="left_branch" src="./images/background/left.png" alt="left branch" />
+      <img class="right_branch" src="./images/background/right.png" alt="right branch" />
+      <div class="container">
+        <div class="img_block">
+          <img src="./images/background/Rectangle 102.png" alt="garden" />
+          <img src="./images/background/Rectangle 103.png" alt="garden" />
+          <img src="./images/background/Rectangle 104.png" alt="garden" />
+        </div>
+      </div>
+    </section>
+    <!-- PLACE SECTION -->
 
-  <!-- PLACE SECTION -->
+    <!-- PROFFESSIONAL SECTION  -->
+    <section class="proffessional_section">
+      <div class="container">
+        <div class="text_block">
+          <h3>
+            <span> Доверьте свой участок профессионалам - </span> пусть они позаботятся о ландшафтном дизайне и
+            благоустройстве
+          </h3>
+        </div>
+        <div class="wrap">
+          <div class="img_content">
+            <span>Пример 3D-визуализации</span>
+            <img class="first_img" src="./images/img/image 5.png" alt="3D example" />
+            <img class="second_img" src="./images/img/image 6.png" alt="3D example" />
+          </div>
+          <div class="list_content">
+            <ul>
+              <li class="li_f">
+                <img src="./images/icons/Vector.png" alt="Tick" />
+                <p>Вы оцените будущий ландшафт с помощью 3D-визуализации и, если это требуется, внесете изменения.</p>
+              </li>
+              <li class="li_s">
+                <img src="./images/icons/Vector.png" alt="Tick" />
+                <p>
+                  Вам не придется контролировать качество нашей работы: отдыхайте и занимайтесь своими делами, пока
+                  специалисты технадзора следят за процессом.
+                </p>
+              </li>
+              <li class="li_t">
+                <img src="./images/icons/Vector.png" alt="Tick" />
+                <p>
+                  Вы подарите себе красивый и ухоженный сад, переложите заботы по уходу на наши плечи и получите
+                  гарантию на все работы.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- PROFFESSIONAL SECTION  -->
+
+    <!-- WHAT WE DO SECTION  -->
+    <section class="what_we_do_section">
+      <div class="container">
+        <div class="text_block">
+          <h3>Что мы делаем</h3>
+        </div>
+        <div class="wrap">
+          <div class="list_item">
+            <div class="img_content">
+              <img src="./images/img/pen.png" alt="pen">
+            </div>
+            <h4>Проектирование</h4>
+            <ul>
+              <li>Новый качественный подход
+                к проектированию</li>
+              <li>Детальная разработка всех инженерных разделов проекта</li>
+              <li>Расчет освещенности участка</li>
+              <li>Реализация идей любой сложности</li>
+              <li>Европейский подход</li>
+              <li>Применение нестандартных современных идей и технологий</li>
+              <li>Точный расчет бюджетов строительства</li>
+            </ul>
+          </div>
+          <div class="list_item">
+            <div class="img_content">
+              <img src="./images/img/tree.png" alt="tree">
+            </div>
+            <h4>Озеленение</h4>
+            <ul>
+              <li>Прямые поставки посадочного материала из лучших европейских питомников</li>
+              <li>Использование новейших технологий при посадке</li>
+              <li>Новый качественный подход к созданию пространств</li>
+              <li>Европейские решения</li>
+              <li>Длительная гарантия на все работы и посадочный материал</li>
+              <li>Сервисное обслуживание</li>
+            </ul>
+          </div>
+          <div class="list_item">
+            <div class="img_content">
+              <img src="./images/img/fence.png" alt="fence">
+            </div>
+            <h4>Благоустройство</h4>
+            <ul>
+              <li>Все виды строительно-монтажных работ по благоустройству</li>
+              <li>Инновационные решения</li>
+              <li>Длительная гарантия на все работы</li>
+              <li>Строительство водоемов любой сложности</li>
+              <li>Разработка индивидуальных малых архитектурных объектов</li>
+            </ul>
 
 
 
-  <script src="./script/main.js"></script>
-</body>
+
+
+
+
+
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- WHAT WE DO SECTION  -->
+    <script src="./script/main.js"></script>
+  </body>
 </html>
