--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Examination</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/media.css" />
+    <link rel="stylesheet" href="./slick/slick.css">
   </head>
   <body>
     <!-- HEADER SECTION  -->
-    <section class="header_section">
+    <!-- <section class="header_section">
       <div class="container">
         <header>
           <div class="logo_box"><img src="./images/icons/logo white.png" alt="logo" /></div>
@@ -34,11 +35,11 @@
         </div>
       </div>
       <img class="left_branch" src="./images/background/Layer1002.png" alt="left branch" />
-    </section>
+    </section> -->
     <!-- HEADER SECTION  -->
 
     <!-- PLACE SECTION -->
-    <section class="place_section">
+    <!-- <section class="place_section">
       <div class="container">
         <div class="text_block">
           <h3>Создаем не просто красивый сад с картинки, <span>а место, куда захочется возвращаться</span></h3>
@@ -62,11 +63,11 @@
           <img src="./images/background/Rectangle 104.png" alt="garden" />
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- PLACE SECTION -->
 
     <!-- PROFFESSIONAL SECTION  -->
-    <section class="proffessional_section">
+    <!-- <section class="proffessional_section">
       <div class="container">
         <div class="text_block">
           <h3>
@@ -104,11 +105,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- PROFFESSIONAL SECTION  -->
 
     <!-- WHAT WE DO SECTION  -->
-    <section class="what_we_do_section">
+    <!-- <section class="what_we_do_section">
       <div class="container">
         <div class="text_block">
           <h3>Что мы делаем</h3>
@@ -116,12 +117,11 @@
         <div class="wrap">
           <div class="list_item">
             <div class="img_content">
-              <img src="./images/img/pen.png" alt="pen">
+              <img src="./images/img/pen.png" alt="pen" />
             </div>
             <h4>Проектирование</h4>
             <ul>
-              <li>Новый качественный подход
-                к проектированию</li>
+              <li>Новый качественный подход к проектированию</li>
               <li>Детальная разработка всех инженерных разделов проекта</li>
               <li>Расчет освещенности участка</li>
               <li>Реализация идей любой сложности</li>
@@ -132,7 +132,7 @@
           </div>
           <div class="list_item">
             <div class="img_content">
-              <img src="./images/img/tree.png" alt="tree">
+              <img src="./images/img/tree.png" alt="tree" />
             </div>
             <h4>Озеленение</h4>
             <ul>
@@ -146,7 +146,7 @@
           </div>
           <div class="list_item">
             <div class="img_content">
-              <img src="./images/img/fence.png" alt="fence">
+              <img src="./images/img/fence.png" alt="fence" />
             </div>
             <h4>Благоустройство</h4>
             <ul>
@@ -156,20 +156,175 @@
               <li>Строительство водоемов любой сложности</li>
               <li>Разработка индивидуальных малых архитектурных объектов</li>
             </ul>
+          </div>
+        </div>
+        <div class="green_btn">
+          <a href="#">Выбрать услугу</a>
+        </div>
+      </div>
+    </section> -->
+    <!-- WHAT WE DO SECTION  -->
 
+    <!-- HOW ORDER SECTION  -->
+    <!-- <section class="how_order_section">
+      <div class="text_block">
+        <h3>
+          Как выбрать растения <br />
+          для сада?
+        </h3>
+      </div>
+      <div class="background_block">
+        <img src="./images/img/журнал 2 1.png" alt="magazine" />
+        <div class="form_block">
+          <span>Пришлем инструкцию!</span>
+          <form name="email" method="post" action="#">
+            <input id="your_email" type="text" placeholder="Ваш Email" /> <br />
+            <input type="checkbox" id="access" name="access" />
+            <label for="access">Я даю согласие на обработку своих персональных данных</label> <br />
+            <input id="sub_input" type="submit" value="Хочу инструкцию" />
+          </form>
+        </div>
+      </div>
+    </section> -->
+    <!-- HOW ORDER SECTION  -->
 
+    <!-- OUR PROJECTS SECTION  -->
+    <!-- <section class="our_projects_section">
+      <div class="container">
+        <div class="text_block">
+          <h3>Наши проекты</h3>
+        </div>
+        <div class="img_block">
+          <img src="./images/img/Rectangle 105.png" alt="garden" />
+          <img src="./images/img/Rectangle 106.png" alt="garden" />
+          <img src="./images/img/Rectangle 107.png" alt="garden" />
+          <img src="./images/img/Rectangle 108.png" alt="garden" />
+          <div class="fig_a">
+            <a href="#">Все проекты</a>
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!-- OUR PROJECTS SECTION  -->
 
+    <!-- FOUR STEPS SECTION  -->
+    <!-- <section class="four_steps_section">
+      <div class="container">
+        <div class="text_block">
+          <h3>
+            4 шага до реализации проекта <br />
+            <span>вашей мечты</span>
+          </h3>
+        </div>
+        <ul>
+          <li>
+            <img src="./images/icons/01.png" alt="1" />
+            <p>
+              <span>Расскажите нам, что вы хотите увидеть на своем участке</span>
+              <br />
+              Побеседуйте с нашим специалистом. Он приедет к вам в любое удобное время.
+            </p>
+          </li>
+          <li>
+            <img src="./images/icons/02.png" alt="2" />
+            <p>
+              <span>Оцените проект, который разработают наши специалисты, и внесите изменения</span> <br />
+              Архитектор разработает проект ландшафтного дизайна и сделает 3D-визуализацию.
+            </p>
+          </li>
+          <li>
+            <img src="./images/icons/03.png" alt="3" />
+            <p>
+              <span>Дождитесь окончания ландшафтных работ</span> <br />
+              Вы получите идеальный участок с хорошим дренажом, мощеными дорожками и площадками, высаженными растениями
+              — деревьями, кустарниками, цветами и газоном.
+            </p>
+          </li>
 
-
-
-
-
-
+          <li>
+            <img src="./images/icons/04.png" alt="4" />
+            <p>
+              <span>Делегируйте уход за участком профессионалам</span> <br />
+              При необходимости мы будем приезжать регулярно и следить за состоянием участка.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section> -->
+    <!-- FOUR STEPS SECTION  -->
+    <!-- WHY WE SECTION  -->
+    <!-- <section class="why_we_section">
+      <div class="container">
+        <div class="text_block">
+          <h3>Почему нас выбирают</h3>
+        </div>
+        <ul>
+          <li>
+            <img src="./images/img/network.png" alt="network" />
+            <p>Создаем проекты, которые точно можно реализовать</p>
+          </li>
+          <li>
+            <img src="./images/img/cil_flower.png" alt="cil_flower" />
+            <p>Создаем проекты, которые точно можно реализовать</p>
+          </li>
+          <li>
+            <img src="./images/img/money.png" alt="money" />
+            <p>Создаем проекты, которые точно можно реализовать</p>
+          </li>
+          <li>
+            <img src="./images/img/diamond.png" alt="diamond" />
+            <p>Создаем проекты, которые точно можно реализовать</p>
+          </li>
+          <li>
+            <img src="./images/img/carbon_security.png" alt="carbon_security" />
+            <p>Создаем проекты, которые точно можно реализовать</p>
+          </li>
+        </ul>
+      </div>
+    </section> -->
+    <!-- WHY WE SECTION  -->
+    <!-- FEEDBACK SECTION -->
+    <section class="feedback_section">
+      <div class="container">
+        <div class="text_block">
+          <h3>Отзывы о нас</h3>
+        </div>
+        <div class="slider_feedback">
+          <div class = "slider_item">
+            <img class = "garden_img" src="./images/img/feedback.png" alt="garden">
+            <div class="text_content">
+              <img src="./images/img/tree.png" alt="tree">
+              <h4>Анна Смирнова</h4>
+              <span>Благоустройство сада в Агалатово</span>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu </p>
+            </div>
+          </div>
+          <div class = "slider_item">
+            <img class = "garden_img" src="./images/img/feedback.png" alt="garden">
+            <div class="text_content">
+              <img src="./images/img/tree.png" alt="tree">
+              <h4>Анна Смирнова</h4>
+              <span>Благоустройство сада в Агалатово</span>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu </p>
+            </div>
+          </div>
+          <div class = "slider_item">
+            <img class = "garden_img" src="./images/img/feedback.png" alt="garden">
+            <div class="text_content">
+              <img src="./images/img/tree.png" alt="tree">
+              <h4>Анна Смирнова</h4>
+              <span>Благоустройство сада в Агалатово</span>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu </p>
+            </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- WHAT WE DO SECTION  -->
-    <script src="./script/main.js"></script>
+    <!-- FEEDBACK SECTION -->
+
+    <script type="text/javascript" src="./script/jquery-1.11.0.min.js"></script>
+    <script type = "text/javascript"src="./script/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="./slick/slick.min.js"></script>
+    <script type="text/javascript" src="./script/main.js"></script>
   </body>
 </html>
