--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Examination</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/media.css" />
-    <link rel="stylesheet" href="./slick/slick.css">
+    <link rel="stylesheet" href="./slick/slick.css" />
   </head>
   <body>
     <!-- HEADER SECTION  -->
@@ -284,46 +284,129 @@
     </section> -->
     <!-- WHY WE SECTION  -->
     <!-- FEEDBACK SECTION -->
-    <section class="feedback_section">
+    <!-- <section class="feedback_section">
       <div class="container">
         <div class="text_block">
           <h3>Отзывы о нас</h3>
         </div>
         <div class="slider_feedback">
-          <div class = "slider_item">
-            <img class = "garden_img" src="./images/img/feedback.png" alt="garden">
+          <div class="slider_item">
+            <img class="garden_img" src="./images/img/feedback.png" alt="garden" />
             <div class="text_content">
-              <img src="./images/img/tree.png" alt="tree">
+              <img src="./images/img/tree.png" alt="tree" />
               <h4>Анна Смирнова</h4>
               <span>Благоустройство сада в Агалатово</span>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              </p>
             </div>
           </div>
-          <div class = "slider_item">
-            <img class = "garden_img" src="./images/img/feedback.png" alt="garden">
+          <div class="slider_item">
+            <img class="garden_img" src="./images/img/feedback.png" alt="garden" />
             <div class="text_content">
-              <img src="./images/img/tree.png" alt="tree">
+              <img src="./images/img/tree.png" alt="tree" />
               <h4>Анна Смирнова</h4>
               <span>Благоустройство сада в Агалатово</span>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              </p>
             </div>
           </div>
-          <div class = "slider_item">
-            <img class = "garden_img" src="./images/img/feedback.png" alt="garden">
+          <div class="slider_item">
+            <img class="garden_img" src="./images/img/feedback.png" alt="garden" />
             <div class="text_content">
-              <img src="./images/img/tree.png" alt="tree">
+              <img src="./images/img/tree.png" alt="tree" />
               <h4>Анна Смирнова</h4>
               <span>Благоустройство сада в Агалатово</span>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              </p>
+            </div>
+          </div>
+          <div class="slider_item">
+            <img class="garden_img" src="./images/img/feedback.png" alt="garden" />
+            <div class="text_content">
+              <img src="./images/img/tree.png" alt="tree" />
+              <h4>Анна Смирнова</h4>
+              <span>Благоустройство сада в Агалатово</span>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              </p>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- FEEDBACK SECTION -->
+    <!-- FAQ QUESTIONS SECTION -->
+    <section class="faq_section">
+      <div class="container">
+        <div class="wrap">
+        <div class="faq_block">
+          <div class="text_block">
+            <h3>Часто задаваемые вопросы</h3>
+          </div>
+        <div class="accordion">
+          <div class="accordion_item">
+            <input class="accordion-item_input" type="checkbox" name="" id="accordion-1" />
+            <label class="accordion-item_trigger" for="accordion-1"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
+            <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
+          </div>
+          <div class="accordion_item">
+            <input class="accordion-item_input" type="checkbox" name="" id="accordion-2" />
+            <label class="accordion-item_trigger" for="accordion-2"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
+            <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
+          </div>
+          <div class="accordion_item">
+            <input class="accordion-item_input" type="checkbox" name="" id="accordion-3" />
+            <label class="accordion-item_trigger" for="accordion-3"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
+            <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
+          </div>
+          <div class="accordion_item">
+            <input class="accordion-item_input" type="checkbox" name="" id="accordion-4" />
+            <label class="accordion-item_trigger" for="accordion-4"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
+            <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
+          </div>
+          <div class="accordion_item">
+            <input class="accordion-item_input" type="checkbox" name="" id="accordion-5" />
+            <label class="accordion-item_trigger" for="accordion-5"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
+            <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
+          </div>
+        </div>
+      </div>
+      <div class="how_order_block">
+        <h4>Как выбрать растения для сада?</h4>
+        <span>Пришлем инструкцию!</span>
+        <img src="./images/img/журнал 2 1.png" alt="magazine">
+        <div class="form_block">
+          <form name="email" method="post" action="#">
+            <input id="your_email" type="text" placeholder="Ваш Email" /> <br />
+            <input type="checkbox" id="access" name="access" />
+            <label for="access">Я даю согласие на своих персональных данных</label> <br/>
+            <input id="sub_input" type="submit" value="Хочу инструкцию" />
+          </form>
+        </div>
+
+      </div>
+    </div>
+      </div>
+    </section>
+    <!-- FAQ QUESTIONS SECTION -->
 
     <script type="text/javascript" src="./script/jquery-1.11.0.min.js"></script>
-    <script type = "text/javascript"src="./script/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="./script/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="./slick/slick.min.js"></script>
     <script type="text/javascript" src="./script/main.js"></script>
   </body>
