added 1 section and footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- HEADER SECTION  -->
-    <!-- <section class="header_section">
+     <section class="header_section">
       <div class="container">
         <header>
           <div class="logo_box"><img src="./images/icons/logo white.png" alt="logo" /></div>
@@ -35,11 +35,11 @@
         </div>
       </div>
       <img class="left_branch" src="./images/background/Layer1002.png" alt="left branch" />
-    </section> -->
+    </section>
     <!-- HEADER SECTION  -->
 
     <!-- PLACE SECTION -->
-    <!-- <section class="place_section">
+    <section class="place_section">
       <div class="container">
         <div class="text_block">
           <h3>Создаем не просто красивый сад с картинки, <span>а место, куда захочется возвращаться</span></h3>
@@ -63,11 +63,11 @@
           <img src="./images/background/Rectangle 104.png" alt="garden" />
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- PLACE SECTION -->
 
     <!-- PROFFESSIONAL SECTION  -->
-    <!-- <section class="proffessional_section">
+    <section class="proffessional_section">
       <div class="container">
         <div class="text_block">
           <h3>
@@ -105,11 +105,11 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- PROFFESSIONAL SECTION  -->
 
     <!-- WHAT WE DO SECTION  -->
-    <!-- <section class="what_we_do_section">
+    <section class="what_we_do_section">
       <div class="container">
         <div class="text_block">
           <h3>Что мы делаем</h3>
@@ -162,11 +162,11 @@
           <a href="#">Выбрать услугу</a>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- WHAT WE DO SECTION  -->
 
     <!-- HOW ORDER SECTION  -->
-    <!-- <section class="how_order_section">
+    <section class="how_order_section">
       <div class="text_block">
         <h3>
           Как выбрать растения <br />
@@ -185,11 +185,11 @@
           </form>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- HOW ORDER SECTION  -->
 
     <!-- OUR PROJECTS SECTION  -->
-    <!-- <section class="our_projects_section">
+    <section class="our_projects_section">
       <div class="container">
         <div class="text_block">
           <h3>Наши проекты</h3>
@@ -204,11 +204,11 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- OUR PROJECTS SECTION  -->
 
     <!-- FOUR STEPS SECTION  -->
-    <!-- <section class="four_steps_section">
+    <section class="four_steps_section">
       <div class="container">
         <div class="text_block">
           <h3>
@@ -250,10 +250,10 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
     <!-- FOUR STEPS SECTION  -->
     <!-- WHY WE SECTION  -->
-    <!-- <section class="why_we_section">
+    <section class="why_we_section">
       <div class="container">
         <div class="text_block">
           <h3>Почему нас выбирают</h3>
@@ -281,10 +281,10 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
     <!-- WHY WE SECTION  -->
     <!-- FEEDBACK SECTION -->
-    <!-- <section class="feedback_section">
+    <section class="feedback_section">
       <div class="container">
         <div class="text_block">
           <h3>Отзывы о нас</h3>
@@ -348,7 +348,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- FEEDBACK SECTION -->
     <!-- FAQ QUESTIONS SECTION -->
     <section class="faq_section">
@@ -404,7 +404,41 @@
       </div>
     </section>
     <!-- FAQ QUESTIONS SECTION -->
-
+    <!-- STILL QUESTIONS SECTION  -->
+    <section class="still_questions_section">
+      <div class="container">
+        <div class="wrap">
+        <div class="text_block">
+          <h2>Остались вопросы?</h2>
+          <p>Пригласите ландшафтного <br> дизайнера на участок!</p>
+        </div>
+        <div class="green_btn">
+          <a href="#">Перезвоните мне</a>
+        </div>
+      </div>
+      </div>
+    </section>
+    <!-- STILL QUESTIONS SECTION  -->
+    <!-- FOOTER -->
+    <footer>
+      <div class="container">
+        <div class="wrap">
+        <div class="contacts_block">
+          <a class = "tel" href="tel:+7(921) 888 88 88">+7(921) 888 88 88</a>
+          <a class = "email" href="mailto:info@vesna.ru">info@vesna.ru</a>
+          <span>© 2021 VESNA</span>
+        </div>
+        <div class="logo_block">
+          <img  src="./images/icons/footer_icon.png" alt="logotype">
+        </div>
+        <div class="social_block">
+          <img src="./images/icons/insta.png" alt="instagram logotype">
+          <a href="#">Политика конфиденциальности</a>
+        </div>
+      </div>
+      </div>
+    </footer>
+    <!-- FOOTER -->
     <script type="text/javascript" src="./script/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="./script/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="./slick/slick.min.js"></script>
