correcting CSS mistakes

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <span>Пришлем инструкцию!</span>
           <form name="email" method="post" action="#">
             <input class="your_email" type="text" placeholder="Ваш Email" /> <br />
-            <input type="checkbox" class="access" name="access" />
+            <input type="checkbox" id="access" name="access" />
             <label for="access">Я даю согласие на обработку своих персональных данных</label> <br />
             <input class="sub_input" type="submit" value="Хочу инструкцию" />
           </form>
@@ -393,7 +393,7 @@
         <div class="form_block">
           <form name="email" method="post" action="#">
             <input class="your_email" type="text" placeholder="Ваш Email" /> <br />
-            <input type="checkbox" class="access" name="access" />
+            <input type="checkbox" id="access" name="access" />
             <label for="access">Я даю согласие на своих персональных данных</label> <br/>
             <input class="sub_input" type="submit" value="Хочу инструкцию" />
           </form>
