--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <li><a href="">Главная</a></li>
               <li><a href="">Портфолио</a></li>
               <li><a href="">Услуги</a></li>
-              <li><a href="">Контакты</a></li>
+              <li><a class = "last_child"href="">Контакты</a></li>
             </ul>
           </nav>
           <div class="nav_links">
